--- a/Schilderijen/Paginas/schilderijen.html
+++ b/Schilderijen/Paginas/schilderijen.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div class="header">
-        <div class="nav-item"><a href="schilderijen.html">Schilderijen</a></div>
-        <div class="nav-item"><a href="tickets.html">Tickets</a></div>
+        <div class="nav-item dropdown">
+            <a href="javascript:void(0)" class="dropbtn">Menu</a>
+            <div class="dropdown-content">
+                <a href="schilderijen.html">Schilderijen</a>
+                <a href="tickets.html">Tickets</a>
+            </div>
+        </div>
         <div class="nav-item">De Roy Lichtenstein Museum</div>
         <button id="modeToggle" class="mode-toggle" onclick="toggleMode()">🌙</button>
     </div>
