--- a/Schilderijen/Paginas/schilderijen.html
+++ b/Schilderijen/Paginas/schilderijen.html
@@ -6,6 +6,7 @@
     <title>Roy Lichtenstein Museum</title>
     <link rel="stylesheet" href="schilderijen.css">
     <script src="schilderijen.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
