--- a/Schilderijen/Paginas/tickets.html
+++ b/Schilderijen/Paginas/tickets.html
@@ -6,6 +6,7 @@
     <title>Tickets - Roy Lichtenstein Museum</title>
     <link rel="stylesheet" href="tickets.css">
     <script defer src="tickets.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
