alle bestanden in aparte mappen gezet, html, css, js en images hebben nu allemaal hun eigen map

--- a/Schilderijen/HTML/schilderijen.html
+++ b/Schilderijen/HTML/schilderijen.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roy Lichtenstein Museum</title>
-    <link rel="stylesheet" href="schilderijen.css">
-    <script src="schilderijen.js"></script>
+    <link rel="stylesheet" href="../CSS/schilderijen.css">
+    <script src="/Schilderijen/JS/schilderijen.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,46 +25,46 @@
         <h2>Roy’s Kunstwerken</h2>
         <div class="art-gallery">
             <div class="art-item">
-                <img src="./Images/crack.jpeg" alt="">
+                <img src="../Images/crack.jpeg" alt="">
                 <p>“Crack„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/still-life.jpeg" alt="">
+                <img src="../Images/still-life.jpeg" alt="">
                 <p>“Still Life„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/foot-and-hand.jpeg" alt="">
+                <img src="../Images/foot-and-hand.jpeg" alt="">
                 <p>“Foot and Hand„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/in-the-car.jpeg" alt="">
+                <img src="../Images/in-the-car.jpeg" alt="">
                 <p>“In The Car„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/sunrise.jpeg" alt="">
+                <img src="../Images/sunrise.jpeg" alt="">
                 <p>“Sunrise„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/girl-with-tear.jpeg" alt="">
+                <img src="../Images/girl-with-tear.jpeg" alt="">
                 <p>“Girl With Tear„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/white-brushstroke.jpeg" alt="">
+                <img src="../Images/white-brushstroke.jpeg" alt="">
                 <p>“White Brushstroke„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/whaam.jpeg" alt="">
+                <img src="../Images/whaam.jpeg" alt="">
                 <p>“Whaam„</p>
             </div>
             <div class="art-item">
-                <img src="./Images/drowning-girl.jpeg" alt="">
+                <img src="../Images/drowning-girl.jpeg" alt="">
                 <p>“Drowning Girl„</p>
             </div>
         </div>
 
         <h2 class="highlight-title">Roy’s Bekendste Kunstwerk</h2>
         <div class="featured-art">
-            <img src="./Images/crying-girl.jpeg" alt="">
+            <img src="../Images/crying-girl.jpeg" alt="">
             <p class="featured-label" style="color: aliceblue;">“Crying Girl„</p>
         </div>
     </div>
