--- a/Schilderijen/HTML/tickets.html
+++ b/Schilderijen/HTML/tickets.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tickets - Roy Lichtenstein Museum</title>
-    <link rel="stylesheet" href="tickets.css">
-    <script defer src="tickets.js"></script>
+    <link rel="stylesheet" href="/Schilderijen/CSS/schilderijen.css">
+    <script defer src="/Schilderijen/JS/tickets.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
