links naar de andere paginas verbeterd

--- a/RoyLichtensteinRasim/HTML/schilderijen.html
+++ b/RoyLichtensteinRasim/HTML/schilderijen.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roy Lichtenstein Museum</title>
     <link rel="stylesheet" href="../CSS/schilderijen.css">
-    <script src="/Schilderijen/JS/schilderijen.js"></script>
+    <script src="../JS/schilderijen.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -65,7 +65,7 @@
         <h2 class="highlight-title">Roy’s Bekendste Kunstwerk</h2>
         <div class="featured-art">
             <img src="../Images/crying-girl.jpeg" alt="">
-            <p class="featured-label" style="color: aliceblue;">“Crying Girl„</p>
+            <p class="featured-label">“Crying Girl„</p>
         </div>
     </div>
 </body>
